--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header{
 
 .header-photo{
     border-radius: 5px;
-    width: 600px;
+    width: 400px;
 }
 
 header p, header h1{
@@ -103,4 +103,40 @@ footer li{
     width: 3rem;
     height: 3rem;
     border-radius: .75rem;
+    border: 1px solid black;
+    background-color: #BBBFCA;
+}
+
+.table>thead>tr>th {
+    background-color: #BBBFCA;
+  }
+
+section{
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    background-color: #E8E8E8;
+    padding: 1rem;
+}
+
+section h2{
+    margin: 4rem;
+    font-weight: bold;
+    color: #495464;
+}
+
+.table{
+    text-align: left;
+    border: 1px solid black;
+}
+
+th, td{
+    border: 1px solid black;
+}
+
+th{
+    width: 50%;
+}
+
+.skill-icon{
+    margin: 1rem;
 }
