fix: responsive design for about me page

--- a/style.css
+++ b/style.css
@@ -96,9 +96,6 @@ footer li{
     color: #E8E8E8;
 }
 
-
-
-
 .icon-square {
     width: 3rem;
     height: 3rem;
@@ -107,9 +104,9 @@ footer li{
     background-color: #BBBFCA;
 }
 
-.table>thead>tr>th {
+.table > thead > tr > th {
     background-color: #BBBFCA;
-  }
+}
 
 section{
     margin-top: 4rem;
@@ -139,4 +136,5 @@ th{
 
 .skill-icon{
     margin: 1rem;
+    margin-bottom: 2rem;
 }
