fix: positioning of elements

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header{
 
 .header-photo{
     border-radius: 5px;
-    width: 400px;
+    width: 600px;
 }
 
 header p, header h1{
@@ -75,7 +75,11 @@ main{
     background-color: #E8E8E8;
     border-radius: 5px;
     box-shadow: 10px 10px #BBBFCA;
-    border: 2px solid #495464;
+    border: 4px solid #112D4E;
+}
+
+.card:hover{
+    background-color: #ffffff;
 }
 
 body{
@@ -108,14 +112,16 @@ footer li{
     background-color: #BBBFCA;
 }
 
-section{
+section, .project-section{
     margin-top: 4rem;
     margin-bottom: 4rem;
     background-color: #E8E8E8;
     padding: 1rem;
+    margin-left: 0;
+    margin-right: 0;
 }
 
-section h2{
+section h2, .projects-title{
     margin: 4rem;
     font-weight: bold;
     color: #495464;
