--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,4 +6,10 @@ header{
   height: 76vh;
   text-align: center;
   margin: 3rem;
+  border: 5px solid white;
+  border-radius: 5px;
+}
+
+header h2{
+  font-weight: 400;
 }
