--- a/src/components/AboutPage/AboutPage.scss
+++ b/src/components/AboutPage/AboutPage.scss
@@ -15,3 +15,10 @@ section{
     margin-left: 8rem;
     height: 60vh;
 }
+
+section p{
+    color: black;
+    padding: 1rem;
+    background-color: #ffffffc7;   
+    border-radius: 5px; 
+}
