--- a/src/components/SubmitButton/SubmitButton.scss
+++ b/src/components/SubmitButton/SubmitButton.scss
@@ -1,5 +1,6 @@
-button{
+.submit-btn{
     padding: 1rem;
     font-family: "Rubik", sans-serif;
-    font-weight: 500;
+    font-weight: 800;
+    width: 8rem;
 }
