--- a/src/components/WorkItem/WorkItem.scss
+++ b/src/components/WorkItem/WorkItem.scss
@@ -1,20 +1,25 @@
 .work-item{
-    height: 10rem;
-    width: 20rem;
+    height: 15rem;
+    width: 15rem;
     background: white;
 }
 
 .work-item > img{
     height: 100%;
     width: 100%;
-    opacity: 1;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
     object-fit: cover;
     margin:  0;
-
+    filter: grayscale(100%);
 }
 
 .work-item > img:hover {
-	opacity: .5;
+    filter: grayscale(0%);
+    border-radius: 50%;
+}
+
+.work-item:hover{
+    transform: scale(1.25); 
+    z-index: 1;
+    border-radius: 50%;
+
 }
