--- a/src/components/WorkPage/WorkPage.scss
+++ b/src/components/WorkPage/WorkPage.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 4%;
+    margin-top: 5%;
     margin-bottom: 0;
     align-self: center;
     height: 100%;
@@ -13,7 +13,8 @@
 
 .work-gallery{
     margin: 0;
+    margin-top: 10%;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 1rem;
+    grid-template-columns: auto auto auto auto auto;
+    gap: 2rem;
 }
