--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,35 @@
 footer{
-    margin-bottom: 2rem;
     display: flex;
-    justify-content: center;
+    flex-direction: row !important;
+    justify-content: space-between;
     font-size: 1.2rem;
+    background-color: white;
+    color: black;
+    align-items: center;
+    padding: 0.5rem;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.icon{
+    height: 1.5rem;
+    width: 1.5rem;
+    margin: 0;
+    margin-right: 1rem;
+}
+
+.icons{
+    height: 2rem;
+    width: 2rem;
+    display: flex;
+    flex-direction: row !important;
+    display: flex;
+    align-items: center;
+    margin-right: 10rem;
+}
+
+footer p {
+    margin-left: 2rem;
 }
