--- a/src/components/ColorfulButton/ColorfulButton.scss
+++ b/src/components/ColorfulButton/ColorfulButton.scss
@@ -9,3 +9,9 @@
     border-radius: 5px;
     color: black;
 }
+
+.colorful-btn:hover, .colorful-btn:active, .colorful-btn:active:focus{
+    background-color: black;
+    border: 2px solid black;
+    color: white;
+}
