--- a/src/style.scss
+++ b/src/style.scss
@@ -1,32 +1,41 @@
-.container{
-  background-image: url(../public/test3.gif);//url(../public/background-image.jpg);
+.home-container, .about-container, .project-container{
+  background-image: url(../public/test3.gif);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   color: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family: "Rubik", sans-serif;
-  font-weight: 900;
   height: 100%;
 }
 
 .work-container{
-  background-image: url(../public/test3.gif);//url(../public/background-image.jpg);
+  background-image: url(../public/test3.gif);
   background-repeat: no-repeat;
   background-size: 102% 100%;
   color: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family: "Rubik", sans-serif;
-  font-weight: 900;
   height: 132vh;
 }
 
 html, body {
   height: 98%;
- /* background-image: linear-gradient(to right, rgba(0, 0, 0, 0.923), rgba(0, 0, 0, 0.940));*/
- background-color: black;
- margin: 0;
+  background-color: black;
+  margin: 0;
+  font-family: "Rubik", sans-serif !important;
+  font-weight: 900;
+}
+
+main p{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.7rem;
+}
+
+section p{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
 }
