--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    padding: 0;
 }
 
 .nav li{
@@ -32,8 +33,15 @@
 .active{
     background-color: white;
     color: black !important;
-    padding: 0.7rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding: 0.5rem;
+    /*padding-left: 2rem;
+    padding-right: 2rem;*/
     border-radius: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+    .nav li{
+        font-size: 1rem;
+    }
+  }
+  
