--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -14,12 +14,12 @@
     width: 100%;
     object-fit: cover;
     margin:  0;
-    filter: grayscale(100%);
+    /*filter: grayscale(100%);*/
     border-radius: 5px;
 }
 
 .project > img:hover {
-    filter: grayscale(0%);
+    /*filter: grayscale(0%);*/
     border-radius: 50%;
 }
 
